# consultant-ia-generative

./: .gitignore  alembic.ini  index.html  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 3328e85ba2bb_create_course_and_subscription_tables.py  3c964eefc0e6_add_email_submission_fields_to_user_.py  a403e310e7b5_manual_create_user_table.py
app/api/endpoints/: auth.py  payments.py  users.py
app/api/schemas/: __init__.py  auth_schemas.py  payment_schemas.py  user_schemas.py
app/core/: config.py  models.py
app/core/ports/: __init__.py  email_sender.py  payment_gateway.py  subscription_repository.py
app/db/: session.py
app/infrastructure/repositories/: __init__.py  subscription_repository.py
app/infrastructure/services/: __init__.py  brevo_sender.py  stripe_adapter.py
